# bookstore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: frontend_views.py  settings.py  urls.py  views.py
bookstore/templates/twitter/: base.html  feed.html  login.html  profile.html  register.html  tweet_card.html
category/: models.py
category/tests/: test_category_model.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_model.py  test_order_serializer.py  test_order_viewsets.py
order/viewsets/: __init__.py  order_viewsets.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_active.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/: test_category_viewsets.py  test_product_model.py  test_product_serializer.py  test_product_viewsets.py
product/viewsets/: category_viewset.py  product_viewset.py
tweet/: admin.py  models.py  serializers.py  urls.py  viewsets.py
tweet/migrations/: 0001_initial.py  0002_comment_like.py
user_profile/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
user_profile/migrations/: 0001_initial.py
